@@ -71,6 +71,7 @@ bugfix:
 - fix class-AddressRuleContainer - improve setAny, offline config file has now any as correct entry
 - fix rule 'filter=(rule is.unused.fast)' for PAN-OS version > 8.1
 - fix address-merger - duplicate FQDN are now also covered
+- fix address-merger - for location=shared
 
 1.5.14 (20180227)
 * class PanAPIConnector : added support for installed app/av/wildfire/threat-version / PA-VM uuid / cpuid
